@@ -1,0 +1,18 @@
+define(<QREG>, <ifelse(
+	$1, d0, q0,
+	$1, d2, q1,
+	$1, d4, q2,
+	$1, d6, q3,
+	$1, d8, q4,
+	$1, d10, q5,
+	$1, d12, q6,
+	$1, d14, q7,
+	$1, d16, q8,
+	$1, d18, q9,
+	$1, d20, q10,
+	$1, d22, q11,
+	$1, d24, q12,
+	$1, d26, q13,
+	$1, d28, q14,
+	$1, d30, q15,
+	<NO REGISTER>)>)dnl
